[package]
name = "root1d"
version = "0.4.0"
edition = "2021"
authors = ["Christophe Troestler <christophe.troestler@umons.ac.be>"]
description = "One dimensional root finding algorithms"
homepage = "https://github.com/Chris00/rust-root1d"
repository = "https://github.com/Chris00/rust-root1d"
documentation = "https://docs.rs/root1d"
license = "GPL-2.0-or-later"
keywords = ["math", "numerics", "science", "mathematics", "simulation"]
categories = ["mathematics", "science", "no-std"]
exclude = ["*.org", "dune-project", "dune", "*.ml"]

[dependencies.rug]
version = "1.15.0"
default-features = false
features = ["float", "rational"]
optional = true

[features]
default = ["std"]
std = []
nightly = []

[dev-dependencies]
criterion = "0.3.5"
doc-comment = "0.3.3"
roots = "0.0.7"
rand = "0.8.5"
rayon = "1.8.0"

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["rug"]

# [[bench]]
# name = "basic"
# harness = false

[[bench]]
name = "pbm748"
harness = false

[[bench]]
name = "pbm748_neval"
harness = false
required-features = ["rug"]

[[example]]
name = "speed"
path = "examples/speed.rs"

[[example]]
name = "speed_toms748"
path = "examples/speed_toms748.rs"

[[example]]
name = "speed_rug_bisect"
path = "examples/speed_rug_bisect.rs"
required-features = ["rug"]

[[example]]
name = "speed_rug_toms748"
path = "examples/speed_rug_toms748.rs"
required-features = ["rug"]

[[example]]
name = "speed_f64"
path = "examples/speed_f64.rs"

[[example]]
name = "speed_roots"
path = "examples/speed_roots.rs"
